force-app/main/default/objects/Lead/fields/Bedrooms_Max__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_Max__c</fullName>
    <label>Bedrooms Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>