force-app/main/default/objects/Lead/fields/Bedrooms_Min__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_Min__c</fullName>
    <label>Bedrooms Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>