force-app/main/default/objects/Lead/fields/CloudingoAgent__ARDI__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__ARDI__c</fullName>
    <label>Residential Delivery Indicator</label>
    <length>12</length>
    <type>Text</type>
</CustomField>