force-app/main/default/objects/Lead/fields/eContacts__Business_Card__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Business_Card__c</fullName>
    <label>Image Data Only</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>