force-app/main/default/objects/Lead/fields/eContacts__Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Consent_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to signify if Consent is given via Vision-e Scan mobile app Signature|Consent module</description>
    <label>Consent Given</label>
    <type>Checkbox</type>
</CustomField>