force-app/main/default/objects/Lead/fields/eContacts__Leads_Send_to_Pardot__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Leads_Send_to_Pardot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A Pardot checkbox for use by Visione Scan app</description>
    <label>Send to Pardot</label>
    <type>Checkbox</type>
</CustomField>