force-app/main/default/objects/Lead/fields/eContacts__Secondary_Image__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Secondary_Image__c</fullName>
    <label>Image Data2 Only</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>