force-app/main/default/objects/Lead/fields/Focused_Area__c.field-meta.xml
<CustomField>
    <fullName>Focused_Area__c</fullName>
    <label>Focused Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Palm Jumerah</fullName>
            </value>
            <value>
                <fullName>Bluewaters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>