force-app/main/default/objects/Lead/fields/Form_Location__c.field-meta.xml
<CustomField>
    <fullName>Form_Location__c</fullName>
    <label>Form Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>