force-app/main/default/objects/Lead/fields/Form_Submission_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_ID__c</fullName>
    <label>Form Submission ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>