force-app/main/default/objects/Lead/fields/FormRegion__c.field-meta.xml
<CustomField>
    <fullName>FormRegion__c</fullName>
    <label>Form Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>