force-app/main/default/objects/Lead/fields/gsir_contactype__c.field-meta.xml
<CustomField>
    <fullName>gsir_contactype__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead</fullName>
            </value>
            <value>
                <fullName>Active Lead</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>