force-app/main/default/objects/Lead/fields/gsir_description__c.field-meta.xml
<CustomField>
    <fullName>gsir_description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>