force-app/main/default/objects/Lead/fields/gsir_inquirytype__c.field-meta.xml
<CustomField>
    <fullName>gsir_inquirytype__c</fullName>
    <label>Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Offplan Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>