force-app/main/default/objects/Lead/fields/gsir_lead_routing_team__c.field-meta.xml
<CustomField>
    <fullName>gsir_lead_routing_team__c</fullName>
    <label>Lead Routing Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL Call Center team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>