force-app/main/default/objects/Lead/fields/gsir_lead_source_1__c.field-meta.xml
<CustomField>
    <fullName>gsir_lead_source_1__c</fullName>
    <label>Lead Source 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>