force-app/main/default/objects/Lead/fields/gsir_listing_type__c.field-meta.xml
<CustomField>
    <fullName>gsir_listing_type__c</fullName>
    <label>Listing Type gsir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>