force-app/main/default/objects/Lead/fields/gsir_showing_option_1__c.field-meta.xml
<CustomField>
    <fullName>gsir_showing_option_1__c</fullName>
    <label>Viewing Option 1</label>
    <type>Date</type>
</CustomField>