force-app/main/default/objects/Lead/fields/gsir_showing_option_2__c.field-meta.xml
<CustomField>
    <fullName>gsir_showing_option_2__c</fullName>
    <label>Viewing Option 2</label>
    <type>Date</type>
</CustomField>