force-app/main/default/objects/Lead/fields/lead_source_2__c.field-meta.xml
<CustomField>
    <fullName>lead_source_2__c</fullName>
    <label>Lead Source 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>