force-app/main/default/objects/Lead/fields/Listing_Type__c.field-meta.xml
<CustomField>
    <fullName>Listing_Type__c</fullName>
    <label>Listing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>