force-app/main/default/objects/Lead/fields/Price_Max__c.field-meta.xml
<CustomField>
    <fullName>Price_Max__c</fullName>
    <label>Price Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>