force-app/main/default/objects/Lead/fields/Price_Min__c.field-meta.xml
<CustomField>
    <fullName>Price_Min__c</fullName>
    <label>Price Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>