force-app/main/default/objects/Lead/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>