force-app/main/default/objects/Lead/fields/Sub_Community__c.field-meta.xml
<CustomField>
    <fullName>Sub_Community__c</fullName>
    <label>Sub-Community</label>
    <length>255</length>
    <type>Text</type>
</CustomField>