force-app/main/default/objects/Lead/fields/up__District__c.field-meta.xml
<CustomField>
    <fullName>up__District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>up__Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Nevada</fullName>
            </value>
            <value>
                <fullName>North Carolina 3</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Sweet Carolina</fullName>
            </value>
            <value>
                <fullName>North Carolina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>