force-app/main/default/objects/Lead/fields/up__Territory__c.field-meta.xml
<CustomField>
    <fullName>up__Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>up__District__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Las Vegas</fullName>
            </value>
            <value>
                <fullName>Oregon</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>Southern California</fullName>
            </value>
            <value>
                <fullName>New York City</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>New York St</fullName>
            </value>
            <value>
                <fullName>Raleigh</fullName>
            </value>
            <value>
                <fullName>Nevada State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>