force-app/main/default/objects/Lead/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>