force-app/main/default/objects/Lead/fields/utmCampaign__c.field-meta.xml
<CustomField>
    <fullName>utmCampaign__c</fullName>
    <label>utmCampaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>