force-app/main/default/objects/Lead/fields/utmContent__c.field-meta.xml
<CustomField>
    <fullName>utmContent__c</fullName>
    <label>utmContent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>