force-app/main/default/objects/Lead/fields/utmLeadsource__c.field-meta.xml
<CustomField>
    <fullName>utmLeadsource__c</fullName>
    <label>utmLeadsource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>