force-app/main/default/objects/Lead/fields/utmMedium__c.field-meta.xml
<CustomField>
    <fullName>utmMedium__c</fullName>
    <label>utmMedium</label>
    <length>80</length>
    <type>Text</type>
</CustomField>