force-app/main/default/objects/Lead/fields/utmSource__c.field-meta.xml
<CustomField>
    <fullName>utmSource__c</fullName>
    <label>utmSource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>