force-app/main/default/objects/Lead/fields/utmTerm__c.field-meta.xml
<CustomField>
    <fullName>utmTerm__c</fullName>
    <label>utmTerm</label>
    <length>80</length>
    <type>Text</type>
</CustomField>