force-app/main/default/objects/Lead/recordTypes/Leads_Web_to_Lead.recordType-meta.xml
<RecordType>
    <fullName>Leads_Web_to_Lead</fullName>
    <active>true</active>
    <businessProcess>Status</businessProcess>
    <label>Leads:  Web-to-Lead</label>
</RecordType>